# meteoswiss-mcp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.de.md  README.md  claude_desktop_config.json  pyproject.toml
.github/workflows/: publish.yml
src/meteoswiss_mcp/: __init__.py  server.py
tests/: test_server.py
