[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meteoswiss-mcp"
version = "0.1.0"
description = "MCP Server fuer Schweizer Wetter- und Klimadaten von MeteoSwiss (SwissMetNet, ICON-Prognosen, Klimanormwerte)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = [
    "mcp",
    "meteoswiss",
    "weather",
    "switzerland",
    "open-data",
    "swissmetnet",
    "climate",
    "swiss-public-data-mcp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/malkreide/meteoswiss-mcp"
Repository = "https://github.com/malkreide/meteoswiss-mcp"

[project.scripts]
meteoswiss-mcp = "meteoswiss_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/meteoswiss_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"src/meteoswiss_mcp/server.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["live: Tests gegen echte APIs (mit -m 'not live' ausschliessen)"]
